# opencv-multithread

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: average_intensity_calculator.hpp  circular_buffer.hpp  clock_thread.hpp  processors.hpp  processors.tpp  queue_thread.hpp  queue_thread.tpp  thread_handle.hpp
lib/: average_intensity_calculator.cpp  clock_thread.cpp  main.cpp  processors.cpp  thread_handle.cpp
